# mochi-raft

./: .clang-format  CMakeLists.txt  COPYRIGHT  README.md  spack.yaml
.github/workflows/: codecov.yml  codeql.yml  test.yml
cmake/: Findreadline.cmake
docs/examples/mochi-raft/01_single_node/: CMakeLists.txt  single_node.cpp
docs/examples/mochi-raft/02_cluster/: CMakeLists.txt  cluster.cpp
docs/examples/mochi-raft/03_fsm/: CMakeLists.txt  kv_fsm.hpp  kv_server.cpp
docs/examples/mochi-raft/04_callbacks/: CMakeLists.txt  callbacks.cpp
docs/examples/mochi-raft/05_forward/: CMakeLists.txt  forward.cpp
docs/examples/mochi-raft/06_rdma/: CMakeLists.txt  rdma_config.cpp
docs/examples/mochi-raft/07_snapshot/: CMakeLists.txt  snapshot.cpp
docs/source/: mochi-raft.rst
docs/source/mochi-raft/: 01_overview.rst  02_fsm.rst  03_single_node.rst  04_submit.rst  05_cluster.rst  06_callbacks.rst  07_forward.rst  08_rdma.rst  09_isolation.rst  10_leadership.rst  11_snapshot.rst
include/: mochi-raft-abt-io-log.h  mochi-raft-memory-log.h  mochi-raft-test.h  mochi-raft.h  mochi-raft.hpp
include/mochi-raft/: mochi_raft.hpp
python/: CMakeLists.txt  py-mochi-raft.cpp
src/: CMakeLists.txt  abt-io-log-helpers.c  abt-io-log-helpers.h  abt-io-log.c  abt-io-macros.h  config.h.in  event_queue.cpp  event_queue.hpp  log_iterator.cpp  log_iterator_impl.hpp  memory-log.c  mochi-raft-config.cmake.in  mochi-raft.pc.in  mochi_raft.cpp  mraft-data.h  mraft-impl.c  mraft-impl.h  mraft-io.c  mraft-io.h  mraft-rpc.h  mraft.c  network.cpp  network.hpp  pcg_basic.c  pcg_basic.h  serialization.hpp  storage.cpp  storage.hpp
tests/: CMakeLists.txt  abt-io-log-benchmark.c  abt-io-log-error-recovery.c  abt-io-log-generic-test.cpp  abt-io-log-simple-test.c  cleanup.sh  error-recovery.c  generic-test.cpp  master.hpp  memory-log-benchmark.c  memory-log-error-recovery.c  memory-log-generic-test.cpp  memory-log.c  memory-log.h  mraft_get_raft_id.c  python-test-framework.cpp  run-test.sh  simple-test.c  spack.yaml  ssg-error-recovery.c  ssg-simple-test.c  ssg-test.c  test-framework.cpp  test_cluster.cpp  test_event_queue.cpp  test_log_iterator.cpp  test_network.cpp  test_raft_init.cpp  test_raft_step.cpp  test_serialization.cpp  test_single_node.cpp  test_snapshot.cpp  test_storage.cpp  worker.hpp
tests/generic-tests/: generic.txt  join-after-remove.txt  join-after-shutdown.txt  leader-join-after-remove.txt  leader-join-after-shutdown.txt  one-server.txt  remove-leader.txt  remove-servers.txt  shutdown-leader.txt  shutdown-only-server-in-cluster.txt  shutdown-servers.txt  three-servers.txt
tests/generics/: adds.txt  applies.txt  removeAndJoinBack.txt  removeAndShutdown.txt  removeLeader.txt  removes.txt  removesAndApplies.txt  removesShutdownsAndJoins.txt  shutdownAndJoinBack.txt  shutdownAndRemove.txt  shutdowns.txt  shutdownsAndAdds.txt  shutdownsAndApplies.txt  suspendLeader.txt
tests/python/: test-mpi.py
tests/scenarios/: 01-apply.lua  01-apply.py  01-single-server.txt  02-add.lua  02-add.py  02-three-servers.txt  03-shutdown.lua  03-shutdown.py  04-kill.lua  04-kill.py  05-switch-role.lua  05-switch-role.py  06-remove-add.lua  06-remove-add.py  07-kill-respawn.py  08-apply-many.py
tools/: CMakeLists.txt  ctl.cpp  kv_fsm.hpp  pipe_protocol.hpp  worker.cpp
